# model-core.rs

./: Cargo.toml  LICENSE  README.md  all.html  index.html  sidebar-items.js
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-pr.yml
models/: index.html  sidebar-items.js
models/auditable/: index.html  sidebar-items.js  struct.Auditable.html
models/property/: index.html  struct.Property.html
models/tag/: index.html  struct.Tag.html
src/: lib.rs  models.rs
src/models/: auditable.rs  property.rs  tag.rs
src/vo/: auditable.rs  property.rs  tag.rs
vo/: index.html
vo/auditable/: index.html  sidebar-items.js  struct.AuditableVO.html
vo/property/: index.html  sidebar-items.js  struct.PropertyVO.html
vo/tag/: index.html  sidebar-items.js  struct.TagVO.html
