[package]
name = "sweetrpg-model-core"
description = "Core model definitions for SweetRPG"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/sweetrpg/model-core.rs"
homepage = "https://github.com/sweetrpg/model-core"
keywords = ["sweetrpg", "model", "core"]
categories = ["data-structures"]
authors = ["Paul Schifferer <paul@schifferers.net>"]
exclude = [
    "*.orig",
    ".github/*",
    ".gitignore",
    ".rust-version",
    ".editorconfig",
    ".cargo_vcs_info.json",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
